--- a/SchooLMS/pom.xml
+++ b/SchooLMS/pom.xml
@@ -25,6 +25,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+
     <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -43,6 +44,11 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
         </dependency>
     </dependencies>
 
